<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_sign_up"
    android:background="@color/white"
    tools:context=".ui.fragments.LogInFragment">


<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/view"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        app:srcCompat="@drawable/backgroud_pokeapp" />-->

<!--    <View-->
<!--        android:id="@+id/view"-->
<!--        android:layout_width="411dp"-->
<!--        android:layout_height="372dp"-->
<!--        android:background="@drawable/gradient2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--    <ImageView-->
<!--        android:id="@+id/img_logo"-->
<!--        android:layout_width="331dp"-->
<!--        android:layout_height="245dp"-->
<!--        android:layout_marginTop="56dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/view"-->
<!--        app:srcCompat="@drawable/pokeapp_logo_trans_white" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/alternate_email_24px"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/password_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textWebPassword"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" />


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="207dp"
            android:layout_height="54dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/google_logo"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="665dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/facebook_logo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="665dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>